Changed Maven version again!