@@ -1,6 +1,7 @@
 package com.codemanship.cdwarehouse;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
@@ -10,7 +11,7 @@ public class WarehouseTest {
     @Test
     public void findsCdInCatalogue(){
         CD cd = new CD("Gary Numan", "The Pleasure Principle");
-        Warehouse warehouse = new Warehouse(List.of(cd));
+        Warehouse warehouse = new Warehouse(Arrays.asList(cd));
         assertEquals(cd, warehouse.search("Gary Numan", "The Pleasure Principle"));
     }
 }
